# nz-facilities

./: LICENSE  README.md  setup.py
change_detection/: README.md  environment.yml  pyproject.toml  test.py
change_detection/facilities_change_detection/cli/: callbacks.py  main.py  parsers.py
change_detection/facilities_change_detection/cli/commands/: hospitals.py  polygonise.py  schools.py
change_detection/facilities_change_detection/core/: facilities.py  hospitals.py  io.py  log.py  polygonise.py  schools.py  util.py
change_detection/facilities_change_detection/layer_styles/: hospital_facilities.qml  hpi.qml  hpi_matched.qml  hpi_new.qml
db/docs/: Makefile  make.bat
db/docs/source/: DOCUMENTATION.rst  conf.py  index.rst  introduction.rst  published_data.rst
db/sql/: schema_and_tables.sql
facilities_change_detection/: environment.yml  schools_change_detection.py
metadata/: nz_facilities.xml
schools_change_detection/: README.md  environment.yml  schools_change_detection.py
update_facilities/: __init__.py  metadata.txt  resources.qrc  test_dbconn.py  update_facilities.py  update_facilities_dialog.py  update_facilities_dialog_base.ui  update_facilities_plugin.py  update_facilities_table.py  update_lds_facilities_table.py  update_temp_facilities.py
update_facilities/sql/: check_facilities_table_sql.py  create_tables.sql  facilities_logging_sql.py  update_facilities_table_sql.py  update_lds_facilities_table_sql.py  update_temp_facilities_table_sql.py
update_facilities/utilities/: config.py  database_warning.py  dbconn.py  facilities_logging.py
(+6 files in other folders)
